// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should render normal label 1`] = `
<div
  className="bg-[#ECEFF2] inline-flex rounded-full px-3 py-1"
>
  <p
    className="text-[#202125] font-["MuseoSans"] flex items-center text-sm font-semibold"
  >
    Online
  </p>
</div>
`;

exports[`Label component should render red label 1`] = `
<div
  className="bg-shade-system-red-500 inline-flex rounded-full px-3 py-1"
>
  <p
    className="text-white font-["MuseoSans"] flex items-center text-sm font-semibold"
  >
    0/3 codes remaining
  </p>
</div>
`;
